--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,13 @@
     <artifactId>pvpUP</artifactId>
     <version>1.0</version>
     <packaging>jar</packaging>
+    <repositories>
+    <!-- This adds the Spigot Maven repository to the build -->
+    <repository>
+        <id>spigot-repo</id>
+        <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
+    </repository>
+</repositories>
     <dependencies>
 		<dependency>
 			<groupId>org.spigotmc</groupId>
